# zouhar_embedding

./: .gitignore  LICENSE  README.md  pyproject.toml
zouhar_embedding/: MetricLearner.py  RNNMetricLearner.py  embedding.py
