[project]
name = "zouhar-metriclearner"
version = "0.0.0"
dependencies = [
    "torch",
    "pandas",
    "scikit-learn",
    "numpy",
    "transformers",
    "datasets"
]
classifiers = [
    "Private :: Do Not Upload",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

